<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.softwork.ydk.middletermproject_time_table.GUI.MakeTimeTableActivity">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/time_logo" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/make_new_time_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/time_table_name_edit_text"
                android:textSize="@dimen/content_text_size"
                android:hint="@string/make_new_time_table_hint"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/make_time_table_button"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/cyonColor"
                android:textSize="@dimen/day_text_size"
                android:text="@string/make_time_table"
                android:onClick="onButtonClick"
                android:background="@drawable/cyon_simple_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/simple_button_heigth" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
