<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.softwork.ydk.middletermproject_time_table.GUI.LectureActivity">

    <RelativeLayout
        android:id="@+id/lecture_title_bar"
        android:background="@drawable/underbar_layout_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lecture"
            android:textSize="@dimen/title_bar_text_size"
            android:textColor="@color/cyonColor"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:id="@+id/lecture_text_view"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/select_exist_lecture_spinner"
            android:layout_width="100dp"
            android:layout_height="@dimen/title_bar_button_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lecture_title_bar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/content_height">

                <TextView
                    android:text="@string/lecture_name"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <EditText
                    android:textSize="@dimen/content_text_size"
                    android:id="@+id/lecture_name_edit_text"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/content_height">

                <TextView
                    android:text="@string/lecture_time"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/start_time_spinner"
                        android:layout_weight="1" />

                    <Spinner
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/end_time_spinner"
                        android:layout_weight="1" />

                    <Spinner
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_spinner"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/content_height">

                <TextView
                    android:text="@string/professor"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <EditText
                    android:textSize="@dimen/content_text_size"
                    android:id="@+id/professor_edit_text"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/content_height">

                <TextView
                    android:text="@string/lecture_major"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <EditText
                    android:textSize="@dimen/content_text_size"
                    android:id="@+id/lecture_major_edit_text"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/content_height">

                <TextView
                    android:text="@string/lecture_room"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <EditText
                    android:textSize="@dimen/content_text_size"
                    android:id="@+id/lecture_room_edit_text"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/lecture_content"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/contentColor"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <EditText
                    android:textSize="@dimen/content_text_size"
                    android:id="@+id/lecture_content_edit_text"
                    android:layout_marginTop="10dp"
                    android:ems="100"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/underbar_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/make_new_lecture_button"
                    android:text="@string/make_new_lecture"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/cyonColor"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/content_margin"
                    android:layout_marginRight="@dimen/content_margin"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:background="@drawable/cyon_simple_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/simple_button_heigth"
                    android:layout_weight="1"
                    android:onClick="onButtonClick" />

                <Button
                    android:id="@+id/lecture_cancel_button"
                    android:text="@string/cancel"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/redOrangeColor"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="@dimen/content_margin"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:background="@drawable/red_orange_simple_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/simple_button_heigth"
                    android:layout_weight="1"
                    android:onClick="onButtonClick" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:background="@drawable/drop_shadow_under_layout"
        android:layout_below="@id/lecture_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/content_height" />

</RelativeLayout>
